package edu.hitsz.aircraft;

public interface EnemyFactory {
    public abstract AbstractAircraft creatEnemy();
}
